# vote-input

./: pyproject.toml  readme.md
app/: controller.py  main.py  vote_counter.py  websocket_app.py
app/controller/: available_key_mapping_list.py  controller.py
app/electron/: index.html  main.js  package-lock.json  package.json  preload.js
app/electron/js/: ffplay.js  listen.js  main.js  randomString.js  webgl.js
app/static/: index.html  listening.html
app/static/js/: listen.js  main.js
app/webserver/: main.py  managers.py  routes.py  websocket.py
