[project]
name = "vote-input"
version = "0.1.0"
description = "A minimal FastAPI project with WebSocket support."
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.9"

# Dependencies required at runtime
dependencies = [
    "fastapi>=0.110.0",
    "python3-xlib>=0.15",
    "uvicorn[standard]>=0.27.0",
    "websockets>=15.0.1",
]
